# enkiMI

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  example.c
src/: CMakeLists.txt  enkimi.c  enkimi.h
